feat: Extend multiple emotion expressions per user